<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hslu.mobpro.persistenz.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="20sp"
                android:text="@string/hslu_mobile_programming" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@color/colorSection"
                android:textStyle="bold"
                android:text="@string/application_preferences" />

            <TextView
                android:id="@+id/txtResumeInvoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/mainactivity_invoke" />

            <TextView
                android:id="@+id/txtTeaPrefs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/preferred_tea" />

            <Button
                android:id="@+id/btnEditTeaPrefs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_tea_prefs" />

            <Button
                android:id="@+id/btnTeaDefaultPrefs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tea_default_prefs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@color/colorSection"
                android:textStyle="bold"
                android:text="@string/file_system" />

            <CheckBox
                android:id="@+id/cbExternalStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/external_storage" />

            <TextView
                android:id="@+id/txtFSState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="38dp"
                android:paddingRight="5dp"
                android:text="state"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@android:color/black"
                android:text="@string/some_text"/>

            <EditText
                android:id="@+id/txtSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnSaveToStorage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/btnLoadFromStorage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/load" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
